<resources>
    <string name="app_name">MediCheck</string>
    <string name="title_home">HOME</string>
    <string name="title_notifications">NOTIFICATIONS</string>
    <string name="title_profile">PROFILE</string>

    <string name="product_name">NAME</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="best_before">BEST BEFORE</string>
    <string name="serial_number">SERIAL NUMBER</string>

    <string name="see_details">SEE MORE</string>
    <string name="title_details">PRODUCT DETAILS</string>

    <string name="title_products">PRODUCT LIST</string>
    <string name="add_to_favourite">FAVOURITE</string>

    <string name="profile_toolbar_menu_title1">About</string>
    <string name="profile_toolbar_menu_title2">Buy products</string>
    <string name="notificationTitle">My notification</string>
    <string name="notificationText">My notification text</string>
    <string name="channelName">Channel name</string>
    <string name="channelDescription">Channel Description</string>

    <string name="profile_about_title">About us</string>
    <string name="profile_about_message">We are a great team called EJUMO.\n\n
        Team members:\n
        Undīne Kobitjeva\n
        Elīna Smoļaka\n
        Mārtiņš Riss\n
        Oļģerts Klāvs Balabāns\n
        Jānis Kumsārs\n\nTo contact us you can write a letter: Tērbatas street 10, Valmiera, LV-4201 </string>
    <string name="warning_to_expire">WARNING</string>
    <string name="title_notif_list">NOTIFICATIONS</string>
    <string name="title_favourite_items">FAVOURITE ITEMS</string>
    <string name="no_data_available_notifications">You have no products that will expire in the next two weeks</string>
    <string name="no_data_available_profile">Your favourite list is empty</string>
    <string name="no_data_available_home">Product list is on the way</string>
    <string name="database_con_problem">A problem occurred, we are tyring our best to reconnect.</string>
    <string name="internet_connection_smth_wrong">Please check if you have internet connection!</string>
</resources>
