<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/grayLight"
    android:divider="?android:dividerVertical"
    android:gravity="center"
    android:minHeight="55dp"
    android:orientation="horizontal"
    android:padding="5dp"
    android:showDividers="middle"
    android:weightSum="100">

    <CheckBox
        android:id="@+id/add_item_to_favorite"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="11"
        android:button="@drawable/star" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="45"
        android:gravity="center"
        android:text="@string/product_name"
        android:textColor="@color/colorTextBlack"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ingredients"
        android:textColor="@color/colorTextBlack"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/serial_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/serial_number"
        android:textColor="@color/colorTextBlack"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/best_before"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="30"
        android:gravity="center"
        android:text="@string/best_before"
        android:textColor="@color/colorTextBlack"
        app:autoSizeTextType="uniform" />

    <ImageButton
        android:id="@+id/button_see_details"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:background="@color/grayLight"
        android:contentDescription="@string/see_details"
        android:src="@drawable/arrow_right_24dp" />
</LinearLayout>
