<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.home.ProductDetailsActivity"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp">

    <TextView
            android:id="@+id/titleDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_details"
            android:textSize="25sp"
            android:textColor="@color/colorTextBlack"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/nameDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:id="@+id/bestBeforeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/best_before"
            android:textColor="@color/colorTextBlack" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_to_favourite"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>
    </LinearLayout>
