<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/grayLight"
    android:divider="?android:dividerVertical"
    android:gravity="center"
    android:minHeight="55dp"
    android:orientation="horizontal"
    android:padding="5dp"
    android:showDividers="middle"
    android:weightSum="100">

    <TextView
        android:id="@+id/warning_to_expire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="35"
        android:gravity="center"
        android:text="@string/warning_to_expire"
        android:textColor="@color/colorTextBlack"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/product_name_not"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="35"
        android:gravity="center"
        android:text="@string/product_name"
        android:textColor="@color/colorTextBlack"
        app:autoSizeTextType="uniform" />


    <TextView
        android:id="@+id/best_before_not"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="30"
        android:gravity="center"
        android:text="@string/best_before"
        android:textColor="@color/colorTextBlack"
        app:autoSizeTextType="uniform" />


</LinearLayout>
